refactor VCardManager